--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div class="button toggle">Blog post</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Blog post title</h2>
-          <p>Here, add a short but appealing description of your blog post.</p>
-          <a href="#" class="external-link" target="_blank">Read</a>
+          <h2>Can Cooking be Easier?</h2>
+          <p>A blog post where I go into detail about making cooking take less time and effort. </p>
+          <a href="https://medium.com/@mvmmazza22/can-cooking-be-easier-2860d4dc9036" class="external-link" target="_blank">Read</a>
         </div>
       </div>
 
