--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video title</h2>
-          <p>Add a short but appealing description of your video.</p>
+          <h2>Video Project Placeholder</h2>
+          <p>I don't think we've done this yet.</p>
           <a href="#" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
@@ -46,8 +46,8 @@
       <div class="button toggle">Podcast</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Podcast title</h2>
-          <p>Add a short but appealing description of your podcast</p>
+          <h2>Roommate Court</h2>
+          <p>The panda group lists off some gripes they have with past or present roommates, and judge them innocent or guilty.</p>
           <a href="#" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
