--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="description">
           <h2>Roommate Court</h2>
           <p>The panda group lists off some gripes they have with past or present roommates, and judge them innocent or guilty.</p>
-          <a href="#" class="external-link" target="_blank">Listen</a>
+          <a href="https://soundcloud.com/xavier-blais-245494668/roommate-court-ep-1" class="external-link" target="_blank">Listen</a>
         </div>
       </div>
     </div>
