--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video Project Placeholder</h2>
-          <p>I don't think we've done this yet.</p>
-          <a href="#" class="external-link" target="_blank">Watch</a>
+          <h2>Video Project</h2>
+          <p>A video where I go over the basic process of Sous Vide cooking.</p>
+          <a href="https://youtu.be/NeKri2KEiYU" class="external-link" target="_blank">Watch</a>
         </div>
       </div>
 
