--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="links-container">
-      <a href="https://drive.google.com" class="button" target="_blank">Resume</a>
+      <a href="https://www.linkedin.com/in/michaelmazza2026/" class="button" target="_blank">LinkedIn</a>
     </div>
 
   </div>
