--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="button toggle">Video</div>
       <div class="slidedown">
         <div class="description">
-          <h2>Video Project</h2>
+          <h2>Sous Vide Tutorial</h2>
           <p>A video where I go over the basic process of Sous Vide cooking.</p>
           <a href="https://youtu.be/NeKri2KEiYU" class="external-link" target="_blank">Watch</a>
         </div>
